updated at: 2023-04-25 17:20, シザーバッグ（VRChat想定） - ２倍製作所 - BOOTH

--- a/VRChat/76/1376476.html
+++ b/VRChat/76/1376476.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tyH8iUqZmVAk79Eb47IPfl8+BWmy0SfCnb/zCtxhKk4="></script>
+    "zLvAtsFWvA7Sms1iD0GRJaKHxP/GI+q8hzRY3M4tstY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シザーバッグ（VRChat想定）","description":"革製のシザーバッグです。\n※蓋は開きません。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n内容物\n・Porch1.fbx（FBXファイル）\n・Porch1.fbx（メタデータ）\n・Porch-BlueLeather.png（青色テクスチャ）\n・Porch-BlueLeather.png.meta（メタデータ）\n・Porch-BrownLeather.png（茶色テクスチャ）\n・Porch-BrownLeather.png.meta（メタデータ）\n・Porch-RedLeather.png（赤色テクスチャ）\n・Porch-RedLeather.png.meta（メタデータ）\n・シザーバッグ.prefab\n・シザーバッグ.prefab.meta（メタデータ）\n・バッグ本体マテリアル.mat\n・バッグ本体マテリアル.mat.meta（メタデータ）\n・金具.mat（マテリアルファイル）\n・金具.mat.meta（メタデータ）\n\n使用方法\n全ファイルをUnityに読み込み、シザーバッグ.prefabを使用してください。\nシザーバッグ本体のInspectorのSkinned Mesh Renderer内、BlendShapesの縦と横の値を増やすとベルトが出てきます。\nバッグ本体マテリアルのAlbedoの左にある□にテクスチャをドラッグアンドドロップで入れると、入れたテクスチャの色に変わります。\nカラーフィルター等で全体の色を変えればカスタマイズ可能です。\n標準で3つの色を同梱しています。（茶色・赤・青）\n金具の色は金具.matのAlbedの色で変更可能です。\nボーンが入っているので、かばん角度調整の角度を変更すると、かばんの角度が変えられます。\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用","url":"https://booth.pm/ja/items/1376476","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1376476/b1a4b4bc-4478-49a4-b87b-b626c7dec04d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tyH8iUqZmVAk79Eb47IPfl8+BWmy0SfCnb/zCtxhKk4="></script>
+    nonce="zLvAtsFWvA7Sms1iD0GRJaKHxP/GI+q8hzRY3M4tstY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1376476/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               233
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1376476/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               233
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
