--- a/VRChat/93/1376293.html
+++ b/VRChat/93/1376293.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "T1QMKkfd3VNfsTIjyQ6JbYJWzGEuyrLS1F3hq7nf6Y4="></script>
+    "rsek9DyjYwriOQgdJ7Pc6kfPsPDLIo3ucECXHtObF80="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat WORLD ギミック】拡張メニュー","description":"【VRChat WORLD ギミック】拡張メニュー\n\n※注意\nVケット2にあった拡張メニューとはちょっと仕様が違います。\n改変が前提です。UnityのUIの知識がちょっと必要です。\nVケット3にあった拡張メニューが無料でBoothにあります。\nVケット3の拡張メニューと違い機能は最小限ですので超軽量です。\ncombat Systemは使用していないのでアバターに仕込んだJointが壊れないです。\n\n・概要\nVRChat WORLD用の拡張メニューです。\nユーザーごとに見えるローカル機能です。\n\n・動画\nhttps://twitter.com/resia0417/status/1129689172237619201\n\n・使い方\nコントローラのメニューボタンorESCキーで表示します。\nコントローラのパッドに触れるor移動キーで非表示します。\n各ユーザに追従するので、どこでも出せます。\nVRの方もデスクトップの方でも操作できます。\n\n参考用に4ページ分のタブ機能と\n4ページ目に(何も鳴らない)BGM Sliderと\nピックアップできるローカルミラーのボタン\nテレポート位置をSave、Loadするボタンがあります。\n拡張メニューを閉じるボタンもあります。\nクイックメニューを開いているときだけ操作できます。\n\n・内容物\nex_menu_package.unitypackage\n※VRCSDKとStandard Assetsが必須です。\n\n・利用規約\n改変は自由です。\n自分のワールドに合うように自由に設定してください。\n\n作者であると偽称することを禁止します。\n再配布、販売することを禁止します。\n\n\n連絡先 Twitter:resia0417\n※初出品なので変なところあったらごめんね！\n\n2019/05/18 開始\n2019/05/18 ex_menu_package_2.zip 要望によりテレポート機能追加 たぶん便利\n2019/05/21 ex_menu_package_3.zip ちょこっと説明文やReadmeを修正\n2019/07/18 ex_menu_package_4.zip Oculus Software版VRChatで拡張メニューが出ない不具合を修正\n2020/03/30 こそっと無料化","url":"https://booth.pm/ja/items/1376293","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/c524210e-019b-4a58-aa4b-5be4972ab38f/i/1376293/33c3b60c-9732-4fc3-8c89-af6b08a1ea81_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T1QMKkfd3VNfsTIjyQ6JbYJWzGEuyrLS1F3hq7nf6Y4="></script>
+    nonce="rsek9DyjYwriOQgdJ7Pc6kfPsPDLIo3ucECXHtObF80="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1376293/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               738
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1376293/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               738
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
