updated at: 2023-04-25 17:20, ふで - ヒヨドリゴヤ_Mk.III - BOOTH

--- a/VRChat/67/1376267.html
+++ b/VRChat/67/1376267.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BDlhP3XgPr/uBuph//qHuJK11udDeyngvIGBA44JMTM="></script>
+    "iI08IcuXZTXg5lT9Yjkno/NmVd4QQm0Fqfc4VWnA01E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ふで","description":"\n【解説】\n\n筆です、ダイナミックボーンの設定も入っています。\n\n\n【利用規約】\n\n当モデルに同梱されているデータの改変は自由ですし、営利、非営利を問わず動画配信、書道、ひとの顔に落書きなどで利用できます。\n\n当モデルを使用したことによる何らかのトラブル、くすぐり自滅、墨汁まみれになる等についての責任は負えません。\n\n\n【連絡先】\n\nUnityPackageが虚無、Zipファイルが爆発した等の連絡事項がありましたら@RK_Hiyodori(Twitter)まで","url":"https://booth.pm/ja/items/1376267","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/560c413a-85df-49d1-b73d-75df752263b7/i/1376267/c7ee22d1-dce9-4abb-bb81-e46da9716deb_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BDlhP3XgPr/uBuph//qHuJK11udDeyngvIGBA44JMTM="></script>
+    nonce="iI08IcuXZTXg5lT9Yjkno/NmVd4QQm0Fqfc4VWnA01E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -152,10 +154,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1376267/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              179
+                              178
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -167,14 +169,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1376267/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              179
+                              178
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
