updated at: 2023-04-25 17:21, 本型かばん - #ikshop - BOOTH

--- a/VRChat/49/1375949.html
+++ b/VRChat/49/1375949.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YefaiD6FWmBqyI+Q00A2bVEIBBmfpoTUvqmfNnmMhW8="></script>
+    "hvCms8CFumVTRXEZvyw+KhTBybtCpvhBQDk1HDeNhRk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"本型かばん","description":"--更新履歴----------------------------------------\n\u003e 2019年5月18日 bookaban.zip\n- 配布開始\n\n\u003e 2020年7月11日 Bookaban_v2.00.zip\n- テクスチャ変更\n- UTS2化\n- 原点修正\n----------------------------------------------------\n\nVRChatでの利用を想定した本型かばんです。booth利用方法の確認がてらテスト配布します。\nunitypackageインポート後、ChestまたはLeft shoulderに配置することになりますが\n胴体との貫通対策のためにDynamicBoneの設定またはご自身でのウエイト再設定を推奨します。\n\n","url":"https://booth.pm/ja/items/1375949","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ec9d8797-e97d-4d27-8629-8d3982b7b981/i/1375949/8f3c408d-a6cc-4b40-b5fc-449d9af87fa7_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YefaiD6FWmBqyI+Q00A2bVEIBBmfpoTUvqmfNnmMhW8="></script>
+    nonce="hvCms8CFumVTRXEZvyw+KhTBybtCpvhBQDk1HDeNhRk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1375949/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1837
+                              1843
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1375949/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1837
+                              1843
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
