--- a/VRChat/13/1374813.html
+++ b/VRChat/13/1374813.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AvQ4tn3m2H1U+yIgK7x8jPP5rgYBQEYChgDp2k1y2G4="></script>
+    "1QwyIcte1d0M9wMvQu/qsGqqJIxJ5dJORlsbZwbTdvQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「アイン」","description":"～商品説明～\n猫耳の子のアバターです。\nフルトラッキング対応、リップシンク「あいうえお」設定済み、アイトラッキング対応、表情アニメーション13種類、シェイプキーが約40パターンあるのでお好みの表情を作成してご使用できます。\n\n・モデルデータ(fbx,mqo,mqx)\n・テクスチャデータ(png)\n・改変用テクスチャデータ(psd)\n・セットアップ済みunitypackage\n\n上記のデータが含まれています。\n\n～Readme～\n本データはVRCでの利用を想定しております。VRC以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・本データの再配布は禁止です。\n・自作発言等、作者を偽る発言はおやめください。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n◆補足\nUnityProjectにVRCSDK及びDynamicBone(任意)をimportしたうえでご使用ください。\n本モデルはArktoon-Shadersを使用しております。\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用・アバターのpublic化は禁止します。","url":"https://booth.pm/ja/items/1374813","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/fce813d5-8c96-498a-b62d-ca1be3385d08/i/1374813/bfaa2752-b175-4b8f-b1b9-5cc70b392a88_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AvQ4tn3m2H1U+yIgK7x8jPP5rgYBQEYChgDp2k1y2G4="></script>
+    nonce="1QwyIcte1d0M9wMvQu/qsGqqJIxJ5dJORlsbZwbTdvQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1374813/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               239
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1374813/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               239
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
