--- a/VRChat/73/1375873.html
+++ b/VRChat/73/1375873.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y2GR6joNVMLJKjAyj9UZrjbMKlzowMvXCCCMl6ziQXY="></script>
+    "CgU/LIQMC991wFtUh5gJ8o/vrE/iYmVnbMl1xWyatAQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Glide Motion","description":"Glide motion for VRChat.\n\nZip file contains, unity package for motion only\n\nThis motion is originally for the twin Framedoll Sword and Shield.\n\n(I saw a similar motion here so I set the prices as same. )","url":"https://booth.pm/ja/items/1375873","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9b1c48a4-0706-4dc5-bc68-03e0ddf8708c/i/1375873/bbead1b7-b548-410a-9a26-306cc8d2efe7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y2GR6joNVMLJKjAyj9UZrjbMKlzowMvXCCCMl6ziQXY="></script>
+    nonce="CgU/LIQMC991wFtUh5gJ8o/vrE/iYmVnbMl1xWyatAQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1375873/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               193
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1375873/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               193
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
