--- a/VRChat/26/1375426.html
+++ b/VRChat/26/1375426.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tsUUyiU/Wtxpt16GPaHmnfj7mBOMOjs0dQq41KpNUEw="></script>
+    "nNdn9tPQ6wWhT69j6d7V+caKrmJT4kLhpTko58pyCMQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】マスク用テクスチャ｜#VRChat #VRoid","description":"synqark様のシェーダー『Arktoon-Shaders』のEmissionに適用することを想定したVRoidモデル用マスクデータ（白黒画像）です。\n\nVRChatにて適用箇所がサムネイル左上のように光ります。\n白い部分が光り、黒い部分はそのままです。\n（正しくはマスクされた箇所の指定された色は影や周囲の色の影響を受けなくなります。）\n\nシェーダーの使い方については配布先様をご参照ください。\nこのマスクデータは他の用途で使っても構いません。\n\n商品がお気に召しましたらブースト用をご購入してくださると大変励みになります。\n無料版とブースト用の中身は同じです。\n\nArktoon-Shaders｜Packetbir様\nhttps://booth.pm/ja/items/1027997","url":"https://booth.pm/ja/items/1375426","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1375426/9f2960d3-ea79-4bab-907f-51a7a2fa75cb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tsUUyiU/Wtxpt16GPaHmnfj7mBOMOjs0dQq41KpNUEw="></script>
+    nonce="nNdn9tPQ6wWhT69j6d7V+caKrmJT4kLhpTko58pyCMQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1375426/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1375426/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               100
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
