--- a/VRChat/68/1375368.html
+++ b/VRChat/68/1375368.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tAb3q9iSuLF0X9jerDRM3sbsiKIyReyBpXDSOmIfx20="></script>
+    "02V86rf1Ott+oAb0UnTQx7YMzsBgn0UFn43fsfOdjMM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ステルスシェーダー","description":"透過シェーダーです。（本物） VRChatToonShaderを元に、ステルスシェーダーに改変したものです。また、当シェーダーはログインアニメーションとしても使えます。\n※ただし、ログインアニメーションはおまけなので設定は各自でお願いします\n\n当シェーダーの使用動画\nhttps://twitter.com/reimhak/status/1129381634640211970?s=20\n※使用モデルである「ミーシェ」は付属されません\n\n同封物：UnityPackage[Stealth.shader/Reimhak's Shader_Stealth.mat/Body.controller/LoginAnimation.anim]\n・ReadMe.txt\n\n～プロパティ項目と注意点～\n・Texture\n・StealthHeight\n・ToonHeight\t※StealthHeightの値までしか表示されません。\n・Tint Color\n・Rim Color\n・ズレの間隔\n・ズレの高さ\n・線の間隔\n・元の明るさ\t※0にしても透明にはなりません、その場合alphaを変更してください。\n・線の明るさ\n・alpha\n\nログインアニメーションの設定方法\n・該当オブジェクトに同封されている[Body.controller]を付与してください。\n　自動的にAnimatorコンポーネントが付与され、オブジェクトアクティブ時に自動再生されます。\n\n　また、まばたきアニメーションが付与されている場合はそこに置き換えるか、または新規オブジェクトを作成し、\n　階層化に該当オブジェクトを移動後、作成したオブジェクトに付与してください。\n　その場合、当アニメーションやアニメーションオーバーライド（表情）のパスが変わるため、修正が必要となります。\n\n\n【禁止事項】\n・二次配布などの再配布\n・自作発言\n\n\nコード閲覧はえっちな人に限ります。不具合等ありましたらReimhakまで連絡お願いします。\n・Created by Reimhak\n\n【連絡先】\n・ Twitter\t@Reimhak\n・ Discord\tReimhak#7170\n\n更新履歴\n2019/05/17\tv1\t//booth販売","url":"https://booth.pm/ja/items/1375368","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/4c101899-020e-4d99-95fc-2bc4ae850b34/i/1375368/6e7ac53a-3eeb-45dd-8c0d-f3d84c81b50d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tAb3q9iSuLF0X9jerDRM3sbsiKIyReyBpXDSOmIfx20="></script>
+    nonce="02V86rf1Ott+oAb0UnTQx7YMzsBgn0UFn43fsfOdjMM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1375368/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1375368/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
