--- a/VRChat/30/1375230.html
+++ b/VRChat/30/1375230.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "o6unAPNUYn4WMyt4WYPJItaQ6up+84L38HI7R9phwPM="></script>
+    "sOEOq5oQ5sqBWBj37yOPTxs7pulFUQnHcEN91z6aEi8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　猫眼鏡（VER.2）","description":"VRchat向けアクセサリ：猫眼鏡（VER.2)\nunityパッケージが入っております\n\n眼鏡以外は付属しておりません、画像にある顔は付属しません\n\nシェイプキーが入っているため、眼鏡のつるの長さを伸ばしたり、猫の表情が少し変えられます","url":"https://booth.pm/ja/items/1375230","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1375230/e7160f4c-8c24-4f92-90da-7804f503c885_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="o6unAPNUYn4WMyt4WYPJItaQ6up+84L38HI7R9phwPM="></script>
+    nonce="sOEOq5oQ5sqBWBj37yOPTxs7pulFUQnHcEN91z6aEi8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1375230/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               264
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1375230/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               264
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
