--- a/VRChat/42/1375142.html
+++ b/VRChat/42/1375142.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BhdzocDoHKWhoCgd2Ve+UTpEfcuKWd+Vv5WRX4FECpQ="></script>
+    "58zV0Ure2ptuwTEWmwlT+qELllqbk4aHnd0n4t306js="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】受信料を払わなくてもいいTV","description":"VRChatでの利用を想定したテレビ兼パソコンモニターの3Dモデルです。\n\nモニターと台座別れているのでお好みで壁掛けにもできます。\n\n※映像は映りませんので各自映像ツールなどを使うか、いい感じにテクスチャを貼り付けてご利用ください\n\n尚、素人制作よるものなので微調整などの設定でご不便おかけすると思いますがご了承ください。\n\n\n▼内容物\nUnityパッケージ\n\nFBX\n\n各種テクスチャ\n\n△350ポリゴンとなっております。\n\n\n◆利用規約◆\n\nVRChatでの利用想定\n\n・商用・個人・改変・ワールドご自由にお使いください。（改変はテクスチャ・ＦＢＸファイルどちらも）\n\n・無償での再配布可（有償での再配布不可）\n再配布する際は当ショップを宣伝してくれると喜びます\n\n・使用用途は自由ですが、他の人に迷惑のかからない範囲でご利用ください\n\n・当商品の問い合わせは一切受け付けておりません。\n\n","url":"https://booth.pm/ja/items/1375142","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e94afb69-0d10-4493-8402-671fdaa09d79/i/1375142/fab4507b-4c3b-4b43-ba04-a4e39ea062db_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BhdzocDoHKWhoCgd2Ve+UTpEfcuKWd+Vv5WRX4FECpQ="></script>
+    nonce="58zV0Ure2ptuwTEWmwlT+qELllqbk4aHnd0n4t306js="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1375142/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              295
+                              296
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1375142/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              295
+                              296
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
