--- a/VRChat/05/1374905.html
+++ b/VRChat/05/1374905.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "34cko+KZlP2Bz9p0zf7RS5D29LlzVHLlJ37+QZSxrWc="></script>
+    "XKNJEJCwasBpEbstNq8tQwnpELWwSepmABbWHPDD5ik="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Feathered Hat","description":"-特徴-\n帽子とその羽根飾りのモデルデス\nマテリアルは分けていますデス\n羽根飾りは片面ポリゴンで透過使用のため透過して両面表示出来るシェーダー推奨デス\nfbxファイルと商品画像と羽根飾り用テクスチャとその展開図が入ってます\nポリゴン数　帽子△１６６４\n　　　　　　羽根飾り△８２２\n製作時Unityバージョン　2018.4.20f1\n\n-更新履歴-\n2019年7月25日\n 多角形ポリゴンを三角ポリゴン化しました\n2020年12月19日\n　Unityパッケージ化\n メッシュの大きさを修正\n Standard_Cutout_CullOffシェーダーを追加\n データ内の日本語文字を英語文字に修正\n\n-内容物-\n・Feathered Hat.fbx\n・Feathered Hat.unitypackage\n・Hat Decoration_UV.png\n・更新履歴.txt\n\n-利用規約-\n当モデルは、憂人本家が作成した3Dオブジェクトデス\n当モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなしますデス\n\nVRChatやUnity製作物やMMD等での利用が可能デス\n改変やペデスタル等での二次配布や商用利用が可能デス\n\n再販や悪意のある利用はしないで下さいデス\n\n利用規約はダウンロード時点での情報ではなく最新の情報が優先されますデス\n当モデルで生じたいかなる損害やトラブルに対して憂人本家は一切責任を負いませんデス\n日本国の著作権法に保護された著作物であることをご留意くださいデス","url":"https://booth.pm/ja/items/1374905","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b38e460c-5ac5-4c59-aaae-e30f1fceea3a/i/1374905/d457b7b8-d1a0-4898-ab51-f15986f0a746_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="34cko+KZlP2Bz9p0zf7RS5D29LlzVHLlJ37+QZSxrWc="></script>
+    nonce="XKNJEJCwasBpEbstNq8tQwnpELWwSepmABbWHPDD5ik="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1374905/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               296
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1374905/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               296
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
