--- a/VRChat/98/1374598.html
+++ b/VRChat/98/1374598.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "63QFYP6/+NRT71emOg4BpaBlERvI8yNxKXvnigapuBQ="></script>
+    "ONlbtjrnwR42aVH5OZoA3AGRcs5i1TJ9YsWlxqQWHNk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"CardHeider","description":"Unityでボードゲームを作るときに手元を隠すのに使えるかもしれないシェーダーとプレファブです\n\n●以下の機能が含まれます。\nスタンダードのキューを変更したシェーダー\n台座っぽい形に配置したボックスとカードのプレファブ\n\n●使い方\nzipの中身をインポート\nカード別に用意するならそれのシェーダーをカードと同じものに変更\n\n●その他\n○Propertiesに以下足して\n_Mask (\"Mask\", Int) = 1\n[Enum(UnityEngine.Rendering.CompareFunction)] _Comp (\"Comp\", Int) = 8\n[Enum(UnityEngine.Rendering.StencilOp)] _Pass (\"Pass\", Int) = 2\n[Enum(UnityEngine.Rendering.StencilOp)] _Fail (\"Fail\", Int) = 0\n[Enum(UnityEngine.Rendering.StencilOp)] _ZFail (\"ZFail\", Int) = 0\n○SubShaderに以下足したら\nStencil \n{\n\tRef [_Mask]\n\tComp [_Comp]\n\tPass [_Pass]\n\tFail [_Fail]\n\tZFail [_ZFail]\n}\n○Queueの番号変えてたいてい窓枠シェーダーになるので試してみては？\n\n[2019/05/21]\n→Stencilいらなかったので消しました。\nバグってた。\nキュー番号変えただけ(3001と3002)でできたっぽいのでそれに変更","url":"https://booth.pm/ja/items/1374598","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/55e0ade6-1a8a-42bf-b4f4-91cc5bdbb5ca/i/1374598/d3d884b3-6d8b-444d-9165-e77dea8ccb0a_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="63QFYP6/+NRT71emOg4BpaBlERvI8yNxKXvnigapuBQ="></script>
+    nonce="ONlbtjrnwR42aVH5OZoA3AGRcs5i1TJ9YsWlxqQWHNk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1374598/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1374598/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
