updated at: 2023-04-25 17:23, 衣装配布 - 偏見で語る兵器bot - BOOTH

--- a/VRChat/83/1374483.html
+++ b/VRChat/83/1374483.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PFUD9npY85tMrlYRsWHAUQY/3zEMTFoARKlEHsb1Pk8="></script>
+    "urXhhPpdZ2Cpxy90EX0PER0t0Wj0GpDDJiJwwJrPCeg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"衣装配布","description":"スキニング済み衣装\nVRCなどにどうぞ\n\n内容物\nunitypackage\nblender元データ\n\n\n※頭がありません\n組み合わせたいアバターの生首を乗せてください\n\n※シェーダーは同梱しておりません\n組み合わせたいアバターのシェーダーに合わせて下さい\n\n※ClothもDynamicBoneも入ってません\n物理演算的にしたい人は入れてください\n\n内容に不備やその他の要望などあればメッセージください\nまた同時にこの内容で妥当な価格など教えてください\n（MMDerなので無償文化圏の住人だからわからん）","url":"https://booth.pm/ja/items/1374483","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b05503b7-3533-4147-9df2-87c774dd464e/i/1374483/9c422e41-bd50-404c-adc1-cf698b745898_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PFUD9npY85tMrlYRsWHAUQY/3zEMTFoARKlEHsb1Pk8="></script>
+    nonce="urXhhPpdZ2Cpxy90EX0PER0t0Wj0GpDDJiJwwJrPCeg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,10 +158,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1374483/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              46
+                              47
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1374483/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              46
+                              47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
