updated at: 2023-04-25 17:24, FREE CRUISER アクリルバッチ - ウォーパルド航空開発研究所 - BOOTH

--- a/VRChat/48/1173648.html
+++ b/VRChat/48/1173648.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gxVVcjnGMEpoI9PGg0MGGBpT6z2I3DIjoUiKEf4I5ig="></script>
+    "n7h5vx8uOxO6U+y9TFT3/o9HCYK5nU0CLzAgIECm4JM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"FREE CRUISER アクリルバッチ","description":"VRChat上の「ワールドを渡り歩く孤高の人々」のためのチーム.\nFREE CRUISERのアクリルバッチです。\nコレをつければあなたもFREE CRUISERのメンバー！\n\n\n\nこの商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1173648","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1120","highPrice":"1770"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1173648/590bcfb2-96a7-4c2f-a084-b3759b64f142_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gxVVcjnGMEpoI9PGg0MGGBpT6z2I3DIjoUiKEf4I5ig="></script>
+    nonce="n7h5vx8uOxO6U+y9TFT3/o9HCYK5nU0CLzAgIECm4JM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1173648/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1173648/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               1
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
@@ -485,7 +486,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -513,7 +514,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
@@ -541,7 +542,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023/05/15</span>
+                                        "autolink u-text-wrap">2023/05/16</span>
                                       </div>
                                     </div>
                                   </div>
