updated at: 2023-04-25 17:24, ジャージ上着のみ - みやび舎 - BOOTH

--- a/VRChat/71/1173171.html
+++ b/VRChat/71/1173171.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zqPw75QrKy6/JEmw1iE6CGVAbnRB07Yaod93PR1mwLc="></script>
+    "7zFBzJvTnkO3fddeop+BcIywxx8C3vc7DFv/GhdYD/k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ジャージ上着のみ","description":"VRoidの服テクスチャのジャージのただし上着のみです。\nワンピースで作ったためズボンはありません、代わりに肌テクスチャのロングスパッツを付属しております。\n\n無料版と有料版に違いはありません。\n\n","url":"https://booth.pm/ja/items/1173171","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/832fe23e-6abb-4cdc-9ac5-102b9173c10f/i/1173171/a9870971-8644-486d-87a2-204ec1ad7eb5_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zqPw75QrKy6/JEmw1iE6CGVAbnRB07Yaod93PR1mwLc="></script>
+    nonce="7zFBzJvTnkO3fddeop+BcIywxx8C3vc7DFv/GhdYD/k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,7 +153,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1173171/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1173171/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
