updated at: 2023-04-25 17:26, 人間をダメにしちゃうコタツ - IKA 3DCG art studio - BOOTH

--- a/VRChat/01/1171401.html
+++ b/VRChat/01/1171401.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3mVp0OK28RXF4O2JltHLwvjYz5k5UqFD1985wSIfLbI="></script>
+    "zb4jcz6ahF/lpk5R4X8bshgX3uR7WS5y4LzseD2G5hY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"人間をダメにしちゃうコタツ","description":"こんなコタツがあれば、きっとこの冬は動かなくなってしまうだろう・・・\nそんな、人間をダメにしちゃうコタツです\nコタツのカラーを6種類作ってみました。\nお部屋にあったものをおいて、人間ダメになりましょう！","url":"https://booth.pm/ja/items/1171401","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a3840435-c2dd-4e4c-98d0-405e5db05f58/i/1171401/00e04a55-0641-4eda-af39-e7af09f6d31c_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3mVp0OK28RXF4O2JltHLwvjYz5k5UqFD1985wSIfLbI="></script>
+    nonce="zb4jcz6ahF/lpk5R4X8bshgX3uR7WS5y4LzseD2G5hY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1171401/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               149
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1171401/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               149
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
