updated at: 2023-04-25 17:29, Tuya&#39;s Fragment Act1 &quot;Device&quot; - T2FACTORY - BOOTH

--- a/VRChat/41/1167741.html
+++ b/VRChat/41/1167741.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mbw3xB+rskuypaGC9k++Rd2mnHV8Bb1khm+rL3/dRnc="></script>
+    "sBlTzuOwSjvRLKN9z+hYp4enu/ayzb46VR/qfL87i7o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Tuya's Fragment Act1 \"Device\"","description":"つよつやふぁくとりーの武器シリーズ「Tuya's Fragment」の第一作目。某魔法少女の武器に影響を受け，\"Device\"の名が冠されている。\n　中央のクリスタルをエネルギー源とし，刃が杖，斧，短剣，両刃剣，と様々な形に変形する可変武器。\n\nTuya's Fragmentとは\n勇希トウヤ，つやなが日頃妄想していたオリジナル武器を形にしたもの。\n影響されるアニメや,ゲーム作品がたくさんあるため,武器ごとにその作品をイメージした名前をつけている。\n　\n","url":"https://booth.pm/ja/items/1167741","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/bfb30d94-9b1e-42d7-be8f-0f140a2c865a/i/1167741/221cf428-5ea1-4d61-904f-ca1fa77d1d36_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mbw3xB+rskuypaGC9k++Rd2mnHV8Bb1khm+rL3/dRnc="></script>
+    nonce="sBlTzuOwSjvRLKN9z+hYp4enu/ayzb46VR/qfL87i7o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1167741/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               75
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1167741/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               75
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
